# jx3-team-bot

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
data/: weather_config.yaml
src/: config.py
src/data/: team_record.db
src/plugins/: admin_handler.py  api.py  blackjack.py  blacklist_record.py  bottle_sort_game.py  checkin_system.py  classic_lines_game.py  cultivation_game.py  database.py  deepseek_ai.py  describe_and_guess.py  doudizhu.py  food_drink_recommend.py  forbidden_word_game.py  friend_handler.py  game_score.py  gomoku_game.py  guess_song_game.py  guessing_game.py  handler.py  html_generator.py  jx3_api.py  jx3_team.py  jx3_websocket.py  life_restart_game.py  pokemon_game.py  red_packet.py  render_image.py  russian_roulette.py  sichuanmajiang.py  simple_dice.py  temp.html  tic_tac_toe_game.py  turtle_soup_game.py  undercover.py  undercover.py11  virtual_pet.py  weather_helper.py  werewolf.py  xuanjing_record.py  (+1 more)
src/static/: equipment.json  lucks.json
src/static/baizhan_images/: baizhan_data.json
src/templates/: auction.html  baizhan_template.html  black_book.html  blacklist.html  bot_plugins_summary.html  daily_prediction_template.html  diary_achievement.html  games_help.html  gold_price_template.html  help.html  help_guide.html  jx3_api_help.html  member_recruit.html  mountain_pass_template.html  role_achievement.html  role_attribute.html  role_cd_record.html  role_luck.html  sand_box.html  team.html  team_help.html  trade_records.html  xuanjing.html
src/utils/: browser_pool.py  html_generator.py  index.py  jx3_profession.py  render_context.py  render_image.py  template_manager.py
