[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "jx3-team-bot"
version = "0.1.0"
description = "年崽机器人 - 剑网3团队管理机器人"
readme = "README.md"
requires-python = ">=3.9, <4.0"
authors = [
    {name = "yuhailong", email = "yuhailong@thalys-tech.onaliyun.com"}
]
keywords = ["nonebot", "bot", "jx3", "qq"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: AsyncIO",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.dependencies]
# NoneBot 核心
nonebot2 = "^2.0.0"
nonebot-adapter-onebot = "^2.0.0"
nonebot-plugin-apscheduler = "^0.4.0"

# HTTP 客户端
aiohttp = "^3.8.0"
requests = "^2.32.3"

# 数据处理
pyyaml = "^6.0"
sqlalchemy = "^2.0.0"

# 图像处理
pillow = "^10.0.0"
playwright = "^1.40.0"
imgkit = "^1.2.3"

# 模板引擎
jinja2 = "^3.1.0"

# 工具库
python-dotenv = "^1.0.0"
pyjwt = "^2.8.0"
jx3api = "^1.0.0"
qqmusic-api = "^1.0.0"

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "flake8",
    "pytest",
    "pytest-asyncio"
]

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" }
]
plugins = []
plugin_dirs = ["src/plugins"]
builtin_plugins = []

[tool.poetry.dependencies]
python = "^3.9"
# 依赖项已移至 [project.dependencies]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
